turned background black

--- a/responsive-website-restaurant-main/assets/css/styles.css
+++ b/responsive-website-restaurant-main/assets/css/styles.css
@@ -53,6 +53,10 @@
   }
 }
 
+body {
+  background-color: black;
+}
+
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
