--- a/responsive-website-restaurant-main/assets/css/styles.css
+++ b/responsive-website-restaurant-main/assets/css/styles.css
@@ -11,11 +11,11 @@
   --title-color: #393939;
   --text-color: #707070;
   --text-color-light: #A6A6A6;
-  --body-color: #FBFEFD;
+  --body-color: Black;
   --container-color: #FFFFFF;
 
   /*========== Font and typography ==========*/
-  --body-font: 'Poppins', sans-serif;
+  --body-font: 'Poppinas', sans-serif;
   --biggest-font-size: 2.25rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
@@ -41,7 +41,7 @@
   --z-fixed: 100;
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
   :root{
     --biggest-font-size: 4rem;
     --h1-font-size: 2.25rem;
@@ -54,7 +54,27 @@
 }
 
 body {
-  background-color: black;
+  background-color: var(--body-color);
+  font-family: var(--body-font);
+}
+h1 {
+  font-size: var(--h1-font-size);
+  color: var(--title-color);
+}
+h2 {
+  font-size: var(--h2-font-size);
+  color: var(--title-color)
+}
+h3 {
+  font-size: var(--h3-font-size);
+  color: var(--title-color)
+}
+p, a, span, li {
+  font-size: var(--normal-font-size);
+  color: var(--text-color-light);
+}
+header {
+  height: var(--header-height);
 }
 
 .modal {
