--- a/responsive-website-restaurant-main/assets/css/styles.css
+++ b/responsive-website-restaurant-main/assets/css/styles.css
@@ -41,8 +41,8 @@
   --z-fixed: 100;
 }
 
-@media screen and (min-width: 768px) {
-  :root {
+@media screen and (min-width: 768px){
+  :root{
     --biggest-font-size: 4rem;
     --h1-font-size: 2.25rem;
     --h2-font-size: 1.5rem;
@@ -53,16 +53,11 @@
   }
 }
 
-.nav__list {
-  display: none
+.home{
+  background-color: #0e0e0e;
 }
 
-/* Rectangle 8919 */
-
-.title {
-  /* Euclid's Cafe */
-
-
+.nav__logo{
   position: absolute;
   left: 45.83%;
   right: 44.47%;
@@ -74,73 +69,30 @@
   font-weight: 600;
   font-size: 24px;
   line-height: 32px;
+  /* identical to box height, or 133% */
 
   color: #FFFFFF;
 }
 
-.menu {
-  position: absolute;
-  width: 1920px;
-  height: 950px;
-  left: 0px;
-  top: 0px;
-
-  background: grey;
-
-
+.nav__menu{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
 }
 
-body {
-  background-color: black;
-}
 
 .modal {
-  display: none;
-  /* Hidden by default */
-  position: fixed;
-  /* Stay in place */
-  z-index: 1;
-
-  /* Sit on top */
-  /*padding-top: 100px;*/
-
-  /* Location of the box */
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0);
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
-}
-
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
